--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==1.0.0
 anyio==3.5.0
 asgiref==3.4.1
 astunparse==1.6.3
+autopep8==1.6.0
 cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.10
@@ -13,6 +14,7 @@ google-auth==2.3.3
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.43.0
+gunicorn==20.1.0
 h11==0.12.0
 h5py==3.6.0
 idna==3.3
@@ -27,6 +29,7 @@ opt-einsum==3.3.0
 protobuf==3.19.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pydantic==1.9.0
 requests==2.27.1
 requests-oauthlib==1.3.0
@@ -41,6 +44,7 @@ tensorflow-cpu==2.7.0
 tensorflow-estimator==2.7.0
 tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
+toml==0.10.2
 typing-extensions==4.0.1
 urllib3==1.26.8
 uvicorn==0.17.0
